2008-04-16  0.42 - H.Merijn Brand   <h.m.brand@xs4all.nl>

	* Generate META.yml myself. I won't use Build.PL
	* Array-refs now accept scalars with magic:
	  $csv->print (*STDOUT, $sth->{NAME_lc});
	* More/better examples
	* Added t/76_magic.t

2008-04-11  0.41 - H.Merijn Brand   <h.m.brand@xs4all.nl>

	* error_diag () subclassable
	* typo in bind_columns () docs
	* examples/csv2xls now uses getline ()
	* better test for getline in t/75_hashref.t (makamata)
	* document return value of getline () with bind_columns ()
	* add perl version prereq to META.yml

2008-04-07  0.40 - H.Merijn Brand   <h.m.brand@xs4all.nl>

	* Implemented getline_hr () and column_names () RT 34474
	  (suggestions accepted from Mark Stosberg)
	* Corrected misspelled variable names in XS
	* Functions are now =head2 type doc entries (Mark Stosberg)
	* Make SetDiag() available to the perl level, so errors can
	  be centralized and consistent
	* Integrate the non-XS errors into XS
	* Add t/75_hashref.t
	* Testcase for error 2023 (Michael P Randall)
	* Completely refactored the XS part of parse/getline, which
	  is now up to 6% faster. YMMV
	* Completed bind_columns. On straight fetches now up to three
	  times as fast as normal fetches (both using getline ())

2008-03-11  0.37 - H.Merijn Brand   <h.m.brand@xs4all.nl>

	* Copied GIT repo to public mirror
	* Fix leak / make meta info available to getline () + tests

2008-03-06  0.36 - H.Merijn Brand   <h.m.brand@xs4all.nl>

	* Updated ppport.h
	* auto-load IO::Handle when needed
	* Tested with all available perl builds, including a fresh
	  threaded 5.11 (blead)

2008-03-01  0.35 (Valloire) - H.Merijn Brand   <h.m.brand@xs4all.nl>

	* use warnings/$^W = 1
	* Tested on 5.10.0, 5.8.8, 5.6.2, and 5.005_04, Strawberry and Cygwin
	* Diagnostics for failed new ()
	* New 'blank_is_undef' option
	* Updated docs
	* Extended the DIAGNOSTICS a bit
	* Updated TODO
	* Fixed allow_whitespace issue, revealed by blank_is_undef
	* Re-enabled some tests