@@ -27,5 +27,6 @@ t/76_magic.t		array_ref from magig
 t/80_diag.t		Error diagnostics
 t/util.pl		Extra test utilities
 examples/csv2xls	Script to onvert CSV files to M$Excel
+examples/csv-check	Script to check a CSV file/stream
 examples/speed.pl	Small benchmark script
 META.yml                                 Module meta-data (added by MakeMaker)
